--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3766,6 +3766,7 @@
 		padding: 2em 5em 1em 7em;
 		width: calc(100% + 2em);
 		margin: 0 0 3em -2em;
+        background-image: url(images/)
 
 	}
 
