icon colors changed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2345,11 +2345,11 @@
 			}
 
 		.icon.style1 {
-			color: #efa8b0;
+			color: #ffcd05;
 		}
 
 		.icon.style2 {
-			color: #c79cc8;
+			color: #f77f19;
 		}
 
 		.icon.style3 {
