--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2353,7 +2353,7 @@
 		}
 
 		.icon.style3 {
-			color: #a89cc8;
+			color: #f77f19;
 		}
 
 		.icon.style4 {
@@ -2361,7 +2361,7 @@
 		}
 
 		.icon.style5 {
-			color: #8cc9f0;
+			color: #ffcd05;
 		}
 
 		@media screen and (max-width: 1680px) {
